Corrections made in oneToOne project

--- a/SignalRHost/Properties/launchSettings.json
+++ b/SignalRHost/Properties/launchSettings.json
@@ -18,7 +18,7 @@
     "SignalRHost": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5001",
+      "applicationUrl": "http://CA214063:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
